--- a/consumption/static/consumption/css.css
+++ b/consumption/static/consumption/css.css
@@ -1,11 +1,3 @@
-.render-options.nav-tabs>li {
-  display: table-cell;
-}
-
-.render-options {
-  width: 100px;
-}
-
-.render-options .tab-content {
-  display: table-cell;
+#chart {
+	margin-bottom: 20px;
 }
