--- a/sensor/templates/sensor/list.html
+++ b/sensor/templates/sensor/list.html
@@ -25,15 +25,42 @@
 		<td>{{item.equipment.name}}</td>
 		<td class="text-center">
 			<div class="btn-group">
-				<button title="Remover" class="btn btn-danger" data-toggle="modal" data-target=".modal" value="{% url 'sensor:delete' pk=item.pk %}">
+				<a title="Remover" class="btn btn-danger" data-toggle="modal" data-target=".modal-{{item.pk}}">
 					<span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
-				</button>
+				</a>
 				<a class="btn btn-default" title="Editar" href="{% url 'sensor:edit' pk=item.pk %}">
 					<i class="glyphicon glyphicon-pencil"></i>
 				</a>
 			</div>
 		</td>
 	</tr>
+
+	<div class="modal modal-{{item.pk}} fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <form id="delete-form" action="{% url 'sensor:delete' pk=item.pk %}" method="post">
+
+          {% csrf_token %}
+          
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <h4 class="modal-title">Remoção</h4>
+          </div>
+
+          <div class="modal-body">
+            <p>Tem certeza que quer deletar o item?</p>
+          </div>
+
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>
+            <button type="submit" class="btn btn-primary" value="Deletar">Deletar</button>
+          </div>
+
+        </form>
+      </div>
+    </div>
+  </div>
+
 {% endfor %}
 </tbody>
 {% endblock %}
