eu não sei o que fiz

--- a/consumption/templates/consumption/graphic.html
+++ b/consumption/templates/consumption/graphic.html
@@ -109,9 +109,9 @@
 										<input class="date-input year-month-range-past hidden"/>
 
 										<div class="year-month-range-picker-past">
-											<input type="text" class="input-small start"/>
+											<input type="text" class="input-small start form-control"/>
 											<span class="add-on">to</span>
-											<input type="text" class="input-small end"/>
+											<input type="text" class="input-small end form-control"/>
 										</div>
 									</div>
 
