--- a/consumption/templates/consumption/graphic.html
+++ b/consumption/templates/consumption/graphic.html
@@ -147,16 +147,16 @@
 
 								<select class="unit">
 									{% for acronym, v in measurement_units %}
-										<option value="{{acronym}}">{{ v }}</option>
+										<option data-label="Potência" value="{{acronym}}">{{ v }}</option>
 									{% endfor %}
-									<option value="money">R$</option>
+									<option data-label="R$" value="money">R$</option>
 								</select>
 							</div>
 						</div>
 					</div>
 
 					<div class="panel-footer text-center">
-						<button role="button" type="button" class="btn btn-lg btn-info plot-button">Fazer gráfico</button>          
+						<button role="button" type="button" class="btn btn-lg btn-info plot-button" data-url="{% url 'consumption:ajaxPlot' %}">Fazer gráfico</button>          
 					</div>
 				</div>
 			</div>
@@ -165,22 +165,22 @@
 				<div class="panel panel-default">
 					<div class="panel-body">
 						<form action="{% url 'consumption:importCSV' %}" method="POST" enctype="multipart/form-data" id="uploadform">
-								{% csrf_token %}
-								<label>Escolha um arquivo:</label><input name="csv" type="file">
+							{% csrf_token %}
+							<label>Escolha um arquivo:</label><input name="csv" type="file">
 
-								{% if csv_error %}
-									{{csv_error}}
-								{% endif %}
-								<div class="form-group">
-										<input type="submit" class="btn btn-info" value="Importar">
-								</div>
+							{% if csv_error %}
+								{{csv_error}}
+							{% endif %}
+							<div class="form-group">
+								<input type="submit" class="btn btn-info" value="Importar">
+							</div>
 						</form>
 
 						<form action="{% url 'consumption:exportCSV' %}" method="GET" enctype="multipart/form-data" id="uploadform">
-								{% csrf_token %}
-								<div class="form-group">
-										<input type="submit" class="btn btn-info" value="Exportar">
-								</div>
+							{% csrf_token %}
+							<div class="form-group">
+								<input type="submit" class="btn btn-info" value="Exportar">
+							</div>
 						</form>
 					</div>
 				</div>
