--- a/smrue/static/css/application.css
+++ b/smrue/static/css/application.css
@@ -43,10 +43,8 @@ body {
 .loading-gif{
   background-image: url("/static/images/loading.gif");
   background-repeat: no-repeat;
-  position: relative;
-  top: 50%;
-  left: 50%;
-  width: 100%;
+  background-position: 50% 50%;
+  height: 300px;
 }
 
 .monthly-range-picker tr:nth-child(2){
