intervalo fixado para o mes seguinte na meta

--- a/consumption/static/consumption/css.css
+++ b/consumption/static/consumption/css.css
@@ -4,8 +4,10 @@
 }
 
 .chart-error {
-	font-size: 28px;
+	font-size: 25px;
+    width: 500px;
     text-align: center;
+    margin: 0 auto;
     color: rgba(128, 128, 128, 0.51);
     padding-top: 131px;
 }
