--- a/goal/templates/goal/list.html
+++ b/goal/templates/goal/list.html
@@ -17,7 +17,7 @@
     <thead>
       <tr>
         <th>Nome</th>
-        <th>Gasto Relativo</th>
+        <th>Gasto Relativo (%)</th>
         <th>Começo</th>
         <th>Fim</th>
         <th>Ações</th>
