--- a/smrue/templates/base.html
+++ b/smrue/templates/base.html
@@ -7,7 +7,7 @@
 {% static "images/fav.ico" as favicon_ico %}
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
