--- a/smrue/templates/index.html
+++ b/smrue/templates/index.html
@@ -71,7 +71,9 @@
 		}
 
 		.description {
-		    background: rgb(245, 245, 245);
+	        background: rgb(255, 184, 84);
+	        padding-top: 40px;
+		    padding-bottom: 40px;
 		}
 
 		.description h1 {
