--- a/equipment/templates/equipment/list.html
+++ b/equipment/templates/equipment/list.html
@@ -25,7 +25,7 @@
 {% for item in equipments %}
 	<tr>
 		<td>{{item.name}}</td>
-		<td>{{item.nominal_power}}</td>
+		<td>{{item.nominal_power}} {{item.measurement_unit}}</td>
 		<td class="text-center">
       <div class="btn-group">
 				<button title="Remover" class="btn btn-danger" data-toggle="modal" data-target=".modal-{{item.pk}}" value="{% url 'equipment:delete' pk=item.pk %}"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
